--- a/javascript-basics-01/Step_1.html
+++ b/javascript-basics-01/Step_1.html
@@ -3,7 +3,14 @@
     <head>
         <title>Step 1</title>
         <meta charset="UTF-8">
+        
     </head>
     <body>
+        <form action="">
+            <label for="">Name:</label>
+            <input type="text" id="fn"><br>
+            <input type="button" value="submit" onclick="fun()">
+        </form>
+        <script src="./step_1js .js"></script>
     </body>
 </html>
