--- a/javascript-basics-01/Step_2.html
+++ b/javascript-basics-01/Step_2.html
@@ -5,5 +5,9 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        
+            <input type="button" value="submit" onclick="fun()">
+        
+        <script src="./step_2js.js"></script>
     </body>
 </html>
